lib cleanup, css cleanup, navbar mobile fix

--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -50,23 +50,9 @@
   background-image: none;
 }
 .btn-status-default.disabled,
-.btn-status-default[disabled],
-fieldset[disabled] .btn-status-default,
 .btn-status-default.disabled:hover,
-.btn-status-default[disabled]:hover,
-fieldset[disabled] .btn-status-default:hover,
-// .btn-status-default.disabled:focus,
-.btn-status-default[disabled]:focus,
-fieldset[disabled] .btn-status-default:focus,
-.btn-status-default.disabled.focus,
-.btn-status-default[disabled].focus,
-fieldset[disabled] .btn-status-default.focus,
-.btn-status-default.disabled:active,
-.btn-status-default[disabled]:active,
-fieldset[disabled] .btn-status-default:active,
-.btn-status-default.disabled.active,
-.btn-status-default[disabled].active,
-fieldset[disabled] .btn-status-default.active {
+.btn-status-default.disabled:focus,
+.btn-status-default.disabled:active {
   color: #fff;
   background-color: $btn-default-color;
   @include border-radius(2px);
@@ -105,23 +91,9 @@ a.btn-status-default:focus {
   outline: none;
 }
 .btn-status-danger.disabled,
-.btn-status-danger[disabled],
-fieldset[disabled] .btn-status-danger,
 .btn-status-danger.disabled:hover,
-.btn-status-danger[disabled]:hover,
-fieldset[disabled] .btn-status-danger:hover,
 .btn-status-danger.disabled:focus,
-.btn-status-danger[disabled]:focus,
-fieldset[disabled] .btn-status-danger:focus,
-.btn-status-danger.disabled.focus,
-.btn-status-danger[disabled].focus,
-fieldset[disabled] .btn-status-danger.focus,
-.btn-status-danger.disabled:active,
-.btn-status-danger[disabled]:active,
-fieldset[disabled] .btn-status-danger:active,
-.btn-status-danger.disabled.active,
-.btn-status-danger[disabled].active,
-fieldset[disabled] .btn-status-danger.active {
+.btn-status-danger.disabled:active {
   @include border-radius(2px);
   color: $secondary-background-color;
   background-color: $btn-danger-color;
@@ -155,23 +127,9 @@ fieldset[disabled] .btn-status-danger.active {
   outline: none;
 }
 .btn-status-success.disabled,
-.btn-status-success[disabled],
-fieldset[disabled] .btn-status-success,
 .btn-status-success.disabled:hover,
-.btn-status-success[disabled]:hover,
-fieldset[disabled] .btn-status-success:hover,
 .btn-status-success.disabled:focus,
-.btn-status-success[disabled]:focus,
-fieldset[disabled] .btn-status-success:focus,
-.btn-status-success.disabled.focus,
-.btn-status-success[disabled].focus,
-fieldset[disabled] .btn-status-success.focus,
-.btn-status-success.disabled:active,
-.btn-status-success[disabled]:active,
-fieldset[disabled] .btn-status-success:active,
-.btn-status-success.disabled.active,
-.btn-status-success[disabled].active,
-fieldset[disabled] .btn-status-success.active {
+.btn-status-success.disabled:active {
   border-radius: 2px;
   color: #fff;
   background-color: $btn-success-color;
