--- a/src/css/components/_table.scss
+++ b/src/css/components/_table.scss
@@ -7,7 +7,7 @@ table {
   border-radius: 2px;
 }
 table.tableWhite {
-  background-color: #f3f3f3;
+  background: none;
   border-radius: 2px;
 
   th {
