--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,5 @@
 @import 'base/normalize';
-@import 'base/variables';
+//@import 'base/variables';
 
 @import 'components/button';
 @import 'components/form';
@@ -10,7 +10,7 @@
 @import 'components/sidebar';
 @import 'components/table';
 
-@import 'utils/mixins';
+//@import 'utils/mixins';
 
 @import 'vendor/vis';
-@import 'hacks/shame';
+// @import 'hacks/shame';
