button css fixes

--- a/src/css/base/_normalize.scss
+++ b/src/css/base/_normalize.scss
@@ -1,5 +1,5 @@
-$primary-background-color: #EEEEEE;
-$secondary-background-color: #E8E8E8;
+$primary-background-color: #F5F5F5;
+$secondary-background-color: #F0F0F0;
 $background-color-3: #DDD;
 $inverse-background-color: #fff;
 $primary-font-color: #000;
