--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -329,9 +329,9 @@
           <tbody>
             <tr ng-repeat="event in history.events track by $index">
               <td data-label="Operation">&nbsp;{{history.events[history.events.length-1-$index].operation}}</td>
-              <td data-label="Date">&nbsp;{{getDate([history.events.length-1-$index])}}</td>
+              <td data-label="Date">&nbsp;{{history.events[history.events.length-1-$index].date | date: "short"}}</td>
               <td data-label="Location">&nbsp;{{getStageName([history.events.length-1-$index])}}</td>
-              <td data-label="Quantity">&nbsp;{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
+              <td data-label="Quantity">&nbsp;{{quantities[history.events.length-1-$index] + " " + units[history.events.length-1-$index]}}</td>
             </tr>
           </tbody>
         </table>
