--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -18,7 +18,7 @@
           <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
           <li class="hide"><a ui-sref=".default.sales-management.track">Sales</a></li>
-          <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
+          <li class="hide"><a ui-sref=".default.orders.menu">Orders</a></li>
           <li><a ui-sref=".default.overview">Home</a></li>
           <li><a ui-sref=".settings.general">Settings</a></li>
           <li><a ui-sref=".help">Help</a></li>
