--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -58,6 +58,18 @@
                             </div>
                           </div>
                         </fieldset>
+
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Tax Number (i.e. HST #)</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" placeholder="896437985" ng-model="taxNumber" type="text"></input>
+                              <small class="text-muted">Change the tax redemption number that appears on your invoices.</small>
+                            </div>
+                          </div>
+                        </fieldset>
                       </div>
 
                       <div class="col-lg-6">
@@ -108,6 +120,7 @@
                             </div>
                           </div>
                         </fieldset>
+
                       </div>
                     </div>
                     <div align="right" class="panel-setting">
