--- a/src/css/components/_panel.scss
+++ b/src/css/components/_panel.scss
@@ -3,7 +3,7 @@
   height: 100%;
   border-color: $primary-border-color;
   background-color: $secondary-background-color;
-  border-radius: 2px;
+  border-radius: 3px;
   border: none;
 
 }
@@ -27,6 +27,17 @@
   }
 }
 
+.panel-login-body {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom:20px;
+  margin-left: 0;
+  background-color: $secondary-background-color;
+  border-color: $primary-border-color;
+  border-radius: 3px;
+
+}
+
 .panel-scroll {
   @extend .panel-body;
   height: 500px;
@@ -42,15 +53,21 @@
   padding-bottom:20px;
 }
 
-.panel-heading {
-  text-align: left;
-	font-size: 18px;
-	font-weight: 300;
-	letter-spacing: 0.025em;
-	height: 40px;
+.panel-login {
+  margin-top: 100px;
+}
 
-  .panel-title {
-    text-align:center;
-    line-height: 20px;
+.panel-default {
+  .panel-heading {
+    text-align: left;
+  	font-size: 18px;
+  	font-weight: 300;
+  	letter-spacing: 0.025em;
+  	height: 40px;
+
+    .panel-title {
+      text-align:center;
+      line-height: 20px;
+    }
   }
 }
