--- a/src/views/login.html
+++ b/src/views/login.html
@@ -6,19 +6,20 @@
 
 </div>
  -->
-
+<div class="login-body">
  <div class="container">
    <div class="row">
-     <div class="col-md-4 col-md-offset-4">
-       <div class="login-panel panel panel-default">
+     <div class="col-md-5 col-centered">
+       <div class="panel-login panel panel-default">
          <div class="panel-heading">
-           <h4 class="panel-title">Login</h4>
+           <h4 class="panel-title"></h4>
          </div>
-         <div class="panel-body">
+         <div class="panel-login-body">
+           <h3 class="text-center">Welcome Back!</h3><br>
            <form role="form" ng-controller="loginCtrl" ng-submit="login()">
              <fieldset>
                <div class="form-group">
-                 <input type="username" class="form-control" id="username" ng-model="username" placeholder="Username or email" autofocus>
+                 <input type="username" class="form-control" id="username" ng-model="username" placeholder="Username or Email" autofocus>
                </div>
                <div class="form-group">
                  <input type="password" class="form-control" id="pwd" ng-model="password" placeholder="Password">
@@ -71,3 +72,4 @@
      </div>
    </div>
  </div> -->
+</div>
