--- a/src/css/components/_form.scss
+++ b/src/css/components/_form.scss
@@ -7,7 +7,6 @@ select {
   -o-border-radius: 2px;
   border-radius: 2px;
 }
-
 .form-control {
   border-radius: 2px;
 }
@@ -30,4 +29,15 @@ select.form-control:focus {
   border: 1px solid $secondary-border-color;
   font-size: 14px;
   box-shadow: none;
+}
+
+.input-required {
+  border-radius: 2px;
+  padding-top:2px;
+  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: #FF5722;
+  color: #ffffff;
+  font-weight: 100;
 }
