--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -10,7 +10,6 @@
                 <button ng-click="addProduct()" class="btn-status-success">Add Product</button>
                 <button ng-click="editProduct()" class="btn-status-default">Edit</button>
                 <button ng-click="deleteProduct(product._id)" class="btn-status-danger">Delete</button>
-                <!--<input type="text" name="search" placeholder="Search for an item" class="search">-->
               </div>
             </div>
             <div class="panel panel-default">
@@ -21,7 +20,6 @@
                       <tr>
                         <th>Select</th>
                         <th>Product Name</th>
-                        <th>Unit Price</th>
                         <th>Description</th>
                       </tr>
                     </thead>
@@ -31,7 +29,7 @@
                           <input type="radio" ng-model="$parent.selectedProduct" ng-value="$index">
                         </td>
                         <td data-label="Product">{{product.name}}</td>
-                        <td data-label="Unit Price">${{product.unitPrice}}/{{product.unit}}</td>
+                        <!-- <td data-label="Unit Price">${{product.unitPrice}}/{{product.unit}}</td> -->
                         <td data-label="Description">{{product.description}}</td>
                       </tr>
                     </tbody>
@@ -52,49 +50,36 @@
   <div class="modal-header">
     <h3 class="modal-title text-center">Add a Product</h3>
   </div>
-    <div class="modal-body">
-      <form>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Product Name</label>
-            <input class="form-control" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod">
-            <small class="text-muted">Maximum 45 characters.</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Unit Price</label>
-            <input class="form-control" ng-model="unitPrice" type="number" step="0.01" placeholder="ex. 4.50">
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Units</label>
-            <br>
-            <select ng-model="unit" name="mydropdown" class="form-control">
-              <option value="lbs">lbs</option>
-              <option value="half lbs">1/2 lbs</option>
-              <option value="kg">Kg</option>
-            </select>
-          </div>
-          <div class="col-lg-6">
-            <label>Attach Product Photo</label>
-            <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-            <small class="text-muted">* PNG and JPG files only</small>
-          </div>
+  <div class="modal-body">
+    <form name="addProductForm">
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Product Name &nbsp;
+            <span ng-show="productRequired" class="input-required"> * Required</span>
+          </label>
+          <input class="form-control" name="name" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod" required='true'>
+          <small class="text-muted">Please enter the product name.</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Attach Product Photo</label>
+             <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+             <small class="text-muted">PNG and JPG files only</small>
           <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
           </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-12">
-            <label>Description</label>
-            <input class="form-control" ng-model="description" maxlength="45" placeholder="Enter a short product description">
-            <small class="text-muted">Maximum 45 characters</small>
-          </div>
-        </fieldset>
-      </form>
-    </div>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-12">
+          <label>Description</label>
+          <input class="form-control" ng-model="description" maxlength="45" placeholder="Enter a short product description">
+          <small class="text-muted">Maximum 45 characters</small>
+        </div>
+      </fieldset>
+    </form>
+  </div>
   <div class="modal-footer">
     <div class="alignright">
-      <button ng-disabled="isSubmitButtonDisabled()" type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
       <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
   </div>
@@ -106,47 +91,47 @@
   <div class="modal-header">
     <h3 class="modal-title text-center">Edit {{name}}</h3>
   </div>
-    <div class="modal-body">
-      <form>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Product Name</label>
-            <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
-            <small class="text-muted">Maximum 25 characters.</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Unit Price</label>
-            <input class="form-control" ng-model="unitPrice" step="0.01" type="number" placeholder="ex. 4.50">
-            <small class="text-muted">Enter in $XX.xx format</small>
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Units</label>
-            <br>
-            <select ng-model="unit" name="mydropdown" class="form-control">
-              <option value="lb">Pounds (Lbs.)</option>
-              <option value="kg">Kilograms (Kgs.)</option>
-              <option value="unit">Per Unit of Fish</option>
-            </select>
-          </div>
-          <div class="col-lg-6">
-            <label>Attach Product Photo</label>
-            <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-            <small class="text-muted">PNG and JPG files ONLY!</small>
-          </div>
-          <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-12">
-            <label>Description</label>
-            <input class="form-control" ng-model="description" maxlength="60" placeholder="Enter a short product description">
-            <small class="text-muted">Maximum 60 characters</small>
-          </div>
-        </fieldset>
-      </form>
-    </div>
+  <div class="modal-body">
+    <form>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Product Name</label>
+          <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
+          <small class="text-muted">Maximum 25 characters.</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Unit Price</label>
+          <input class="form-control" ng-model="unitPrice" step="0.01" type="number" placeholder="ex. 4.50">
+          <small class="text-muted">Enter in $XX.xx format</small>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Units</label>
+          <br>
+          <select ng-model="unit" name="mydropdown" class="form-control">
+            <option value="lb">Pounds (Lbs.)</option>
+            <option value="kg">Kilograms (Kgs.)</option>
+            <option value="unit">Per Unit of Fish</option>
+          </select>
+        </div>
+        <div class="col-lg-6">
+          <label>Attach Product Photo</label>
+          <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+          <small class="text-muted">PNG and JPG files ONLY!</small>
+        </div>
+        <button ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
+        </button>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-12">
+          <label>Description</label>
+          <input class="form-control" ng-model="description" maxlength="60" placeholder="Enter a short product description">
+          <small class="text-muted">Maximum 60 characters</small>
+        </div>
+      </fieldset>
+    </form>
+  </div>
   <div class="modal-footer">
     <div class="alignright">
       <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
