--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -94,7 +94,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Units &nbsp;
-            <span ng-show="quantityRequired" class="input-required"> * Required</label>
+            <span ng-show="unitsRequired" class="input-required"> * Required</label>
           <select name="units" class="form-control" ng-model="units" required>
             <option value="lbs">lbs</option>
             <option value="half lbs">1/2 lbs</option>
