orders angular tabbing added

--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -118,7 +118,6 @@
           <textarea class="form-control" placeholder="ex. Deliver to back gate" ng-model="note"></textarea>
         </div>
       </fieldset>
-
     </form>
   </div>
   </form>
@@ -132,7 +131,7 @@
 </script>
 
 
-<!-- MANUAL ORDER INPUT MODAL-->
+<!-- EDIT ORDER INPUT MODAL-->
 <script type="text/ng-template" id="editCustomerModal.html">
   <div class="modal-header">
     <h3 class="modal-title text-center">Edit Customer</h3>
