--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -37,7 +37,6 @@
 .navbar-header a:hover {
   -webkit-filter: invert(15%);
 }
-
 .navbar-collapse .nav li {
   padding: 10px 5px;
   height: 70px;
@@ -65,13 +64,12 @@
   }
   .navbar-nav>li>a {
     align-items: center;
-    padding-top:0px;
-    padding-bottom: 0px;
+    padding-top: 0;
+    padding-bottom: 0;
     padding-left: 2px;
     padding-right: 2px;
   }
 }
-
 .navbar-right {
   margin-right: 30px;
 }
