--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -109,27 +109,62 @@
     <h3 class="modal-title text-center">Add an Invoice</h3>
   </div>
   <div class="modal-body">
-    <form name="addOrderForm">
+    <ul class="nav nav-tabs">
+      <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1">Customer Information</a></li>
+      <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2">Payment Information</a></li>
+    </ul>
+    <!--    <ul class="nav nav-tabs">
+          <li ng-repeat="tab in tabs" ng-class ="{active:isActiveTab(tab.url)}" ng-click="onClickTab(tab)"{{tab.title}}</li>
+        </ul>-->
+    <br>
+
+    <form name="addOrderForm" ng-init="item=1">
+      <div id="customerInfo.html" ng-show="item==1">
       <fieldset class="form-group">
         <div class="col-lg-6">
-          <label>Customer Name &nbsp; <span class="input-required" ng-show="nameRequired"> * Required</span></label>
+          <label>Customer Name &nbsp;
+            <span class="input-required" ng-show="nameRequired"> * Required</span>
+          </label>
           <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
           <small class="text-muted">Maximum 30 characters</small>
         </div>
         <div class="col-lg-6">
-          <label>Email &nbsp; <span class="input-required" ng-show="emailRequired"> * Required</span></label>
+          <label>Email &nbsp;
+            <span class="input-required" ng-show="emailRequired"> * Required</span>
+          </label>
           <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com" name="email" required>
           <small class="text-muted">Please enter a valid email</small>
         </div>
       </fieldset>
       <fieldset class="form-group">
         <div class="col-lg-4">
-          <label>Invoice Number &nbsp; <span class="input-required" ng-show="invoiceRequired"> * Required</span></label>
+          <label>Phone Number &nbsp;
+            <span class="input-required" ng-show="phoneRequired"> * Required</span>
+          </label>
+          <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required></input>
+          <small class="text-muted">No spaces or dashes</small>
+        </div>
+        <div class="col-lg-8">
+          <label>Notes</label>
+          <textarea class="form-control" ng-model="note" type="text" placeholder="ex. Deliver to back door" name="note"></textarea>
+        </div>
+      </fieldset>
+    </div>
+
+
+    <div id ="paymentInfo.html" ng-show="item==2">
+      <fieldset class="form-group">
+        <div class="col-lg-4">
+          <label>Invoice Number &nbsp;
+            <span class="input-required" ng-show="invoiceRequired"> * Required</span>
+          </label>
           <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
           <small class="text-muted">Maximum 10 characters</small>
         </div>
         <div class="col-lg-4">
-          <label>Payment Method &nbsp; <span class="input-required" ng-show="paymentRequired"> * Required</span></label>
+          <label>Payment Method &nbsp;
+            <span class="input-required" ng-show="paymentRequired"> * Required</span>
+          </label>
           <select ng-model="paymentMethod" class="form-control" name="payment" required>
             <option value="Cash">Cash</option>
             <option value="Cheque">Cheque</option>
@@ -139,7 +174,9 @@
           <small class="text-muted">Choose from the dropdown list</small>
         </div>
         <div class="col-lg-4">
-          <label>Status &nbsp; <span class="input-required" ng-show="statusRequired"> * Required</span></label>
+          <label>Status &nbsp;
+            <span class="input-required" ng-show="statusRequired"> * Required</span>
+          </label>
           <select ng-model="status" class="form-control" name="status" required>
             <option value="pending">Pending</option>
             <option value="delivered">Delivered</option>
@@ -152,23 +189,20 @@
       </fieldset>
       <fieldset class="form-group">
         <div class="col-lg-4">
-          <label>Invoice Date &nbsp; <span class="input-required" ng-show="dateRequired"> * Required</span></label>
+          <label>Invoice Date &nbsp;
+            <span class="input-required" ng-show="dateRequired"> * Required</span>
+          </label>
           <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
           <small class="text-muted">YYYY-MM-DD</small>
         </div>
         <div class="col-lg-4">
-          <label>Credit Terms (in Days) &nbsp; <span class="input-required" ng-show="creditRequired"> * Required</span></label>
+          <label>Credit Terms (in Days) &nbsp;
+            <span class="input-required" ng-show="creditRequired"> * Required</span>
+          </label>
           <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
           <small class="text-muted">Enter the invoice terms</small>
         </div>
         <div class="col-lg-4">
-          <label>Phone Number &nbsp; <span class="input-required" ng-show="phoneRequired"> * Required</span></label>
-          <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required></input>
-          <small class="text-muted">No spaces or dashes</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-4 col-centered">
           <label>Order Currency</label>
           <select ng-model="currency" class="form-control">
             <option value="USD">USD</option>
@@ -178,6 +212,8 @@
           <small class="text-muted">Choose the currency type.</small>
         </div>
       </fieldset>
+    </div>
+
       <hr class="short">
       <div class="table-responsive">
         <table class="table tableWhite">
@@ -189,7 +225,8 @@
               <th>Units</th>
               <th>Quantity (Max: {{selectedBlock.quantity + selectedBlock.units}})</th>
               <th>Tax Rate (%)</th>
-              <th>&nbsp; <span class="input-required" ng-show="tableRequired"> *</span>&nbsp;</th>
+              <th>&nbsp;
+                <span class="input-required" ng-show="tableRequired"> *</span>&nbsp;</th>
             </tr>
           </thead>
           <tbody>
@@ -200,7 +237,9 @@
               <td data-label="Units">{{item.units}}</td>
               <td data-label="Quantity">{{item.quantity}}</td>
               <td data-label="Tax Rate">{{item.taxRate}}</td>
-              <td data-label="Remove"><button ng-click="removeItem($index)" class="btn-status-danger"><i class="fa fa-minus"></i></btn></td>
+              <td data-label="Remove">
+                <button ng-click="removeItem($index)" class="btn-status-danger"><i class="fa fa-minus"></i></btn>
+              </td>
 
             </tr>
             <tr>
@@ -232,7 +271,6 @@
                 <input class="form-control" maxlength="10" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
               </td>
 
-
               <td data-label="Add Entry">
                 <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-status-success"><i class="fa fa-plus"></i></btn>
               </td>
@@ -255,65 +293,65 @@
 
 <!-- FILTER ORDERS MODAL-->
 <script type="text/ng-template" id="views/modals/order-filter.html">
-    <div class="modal-header">
-      <h3 class="modal-title">Filter Order Criteria</h3>
-    </div>
-    <div class="modal-body">
-      <form>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Customer Name</label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
-            <small class="text-muted">[Optional] Maximum 30 characters</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Invoice Number</label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-            <small class="text-muted">[Optional] Order Invoice </small>
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Payment Method</label>
-            <select ng-model="paymentMethod" class="form-control">
-              <option value="Cash">Cash</option>
-              <option value="Cheque">Cheque</option>
-              <option value="Credit">Credit</option>
-              <option value="Debit">Debit</option>
-            </select>
-            <small class="text-muted">Choose from the dropdown list</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Status</label>
-            <select ng-model="status" class="form-control">
-              <option value="pending">Pending</option>
-              <option value="delivered">Delivered</option>
-              <option value="paid">Paid</option>
-              <option value="cancelled">Cancelled</option>
-              <option value="refunded">Refunded</option>
-            </select>
-            <small class="text-muted">Choose from the dropdown list</small>
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-            <div class="col-lg-6">
-            <label>Date Range - From:</label>
-            <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
-            <small class="text-muted">Filter Range (Beginning Date)</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Date Range - To:</label>
-            <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
-            <small class="text-muted">Filter Range (End Date)</small>
-          </div>
-        </fieldset>
+  <div class="modal-header">
+    <h3 class="modal-title">Filter Order Criteria</h3>
+  </div>
+  <div class="modal-body">
+    <form>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Customer Name</label>
+          <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
+          <small class="text-muted">[Optional] Maximum 30 characters</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Invoice Number</label>
+          <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+          <small class="text-muted">[Optional] Order Invoice </small>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Payment Method</label>
+          <select ng-model="paymentMethod" class="form-control">
+            <option value="Cash">Cash</option>
+            <option value="Cheque">Cheque</option>
+            <option value="Credit">Credit</option>
+            <option value="Debit">Debit</option>
+          </select>
+          <small class="text-muted">Choose from the dropdown list</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Status</label>
+          <select ng-model="status" class="form-control">
+            <option value="pending">Pending</option>
+            <option value="delivered">Delivered</option>
+            <option value="paid">Paid</option>
+            <option value="cancelled">Cancelled</option>
+            <option value="refunded">Refunded</option>
+          </select>
+          <small class="text-muted">Choose from the dropdown list</small>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Date Range - From:</label>
+          <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
+          <small class="text-muted">Filter Range (Beginning Date)</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Date Range - To:</label>
+          <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
+          <small class="text-muted">Filter Range (End Date)</small>
+        </div>
+      </fieldset>
 
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button ng-disabled="isFilterDisabled()" class="btn-status-success" type="button" ng-click="ok()">Filter</button>
-      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
-    </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button ng-disabled="isFilterDisabled()" class="btn-status-success" type="button" ng-click="ok()">Filter</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+  </div>
 </script>
 
 <!-- DELETE ORDER MODAL-->
