--- a/src/views/forgot-password.html
+++ b/src/views/forgot-password.html
@@ -1,7 +1,9 @@
+<div class="login-body">
+
 <div class="container">
    <div class="row">
-     <div class="col-md-4 col-md-offset-4">
-       <div class="login-panel panel panel-default">
+     <div class="col-md-5 col-centered">
+       <div class="panel-login panel panel-default">
          <div class="panel-heading">
            <h3 class="panel-title">Enter Username/Email</h3>
          </div>
@@ -21,3 +23,4 @@
      </div>
    </div>
  </div>
+</div>
