--- a/src/views/sign-up-code.html
+++ b/src/views/sign-up-code.html
@@ -1,16 +1,8 @@
-<!--
-<div ng-controller="LoginCtrl1">
-  IsAuthenticated:
-    <input type="checkbox" ng-model="auth.isLoggedIn" />
-    <a ui-sref="dashboard">dashboard</a>
-
-</div>
- -->
-
+<div class="login-body">
  <div class="container">
    <div class="row">
-     <div class="col-md-4 col-md-offset-4">
-       <div class="login-panel panel panel-default">
+     <div class="col-md-5 col-centered">
+       <div class="panel-login panel panel-default">
          <div class="panel-heading">
            <h4 class="panel-title">Login</h4>
          </div>
@@ -45,35 +37,4 @@
      </div>
    </div>
  </div>
-
-
- <!-- <div class="container-fluid wrap2">
-   <div class="container">
-     <div class="auth-form">
-       <form role="form" ng-controller="loginCtrl" ng-submit="login()">
-         <div class="auth-form-header">
-           <h2>Login</h2>
-         </div>
-
-         <div class="auth-form-body">
-           <div class="form-group">
-             <label for="username">Username:</label>
-             <input type="username" class="form-control" id="username" ng-model="username" placeholder="Enter email">
-           </div>
-           <div class="form-group">
-             <label for="pwd">Password:</label>
-             <input type="password" class="form-control" id="pwd" ng-model="password" placeholder="Enter password">
-           </div>
-           <div class="form-group">
-
-             <label>Don't have an account? <a ui-sref="signUp">Sign Up</a> now!</label>
-           </div>
-           <div class="form-group">
-
-             <button type="submit" class="btn btn-default">Submit</button>
-           </div>
-         </div>
-       </form>
-     </div>
-   </div>
- </div> -->
+</div>
