--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -168,7 +168,12 @@
         </div>
       </fieldset>
       <fieldset class="form-group">
-        <div class="col-lg-4 col-centered">
+          <div class="col-lg-4">
+            <label>Delivery Charge</label>
+            <input class="form-control" maxlength="10" ng-model="deliveryCharge" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 40" name="deliveryCharge"></input>
+            <small class="text-muted">Choose the currency type.</small>
+          </div>
+        <div class="col-lg-4">
           <label>Order Currency</label>
           <select ng-model="currency" class="form-control">
             <option value="USD">USD</option>
